# se-toolkit-lab-7

./: .env.docker  .env.docker.example  Caddyfile  README.md  docker-compose.yml  docker-compose.yml.backup  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: etl.py  main.py
bot/: Dockerfile  PLAN.md  bot.py  config.py  main.py  pyproject.toml
bot/handlers/: __init__.py  commands.py  natural.py
bot/handlers/commands/: __init__.p  __init__.py
bot/services/: __init__.py  llm_client.py  lms_api.py  lms_client.py
bot/tools/: __init__.py  schemas.py
frontend/: Dockerfile
